--- a/ui/timeline/timeline.runtime.css
+++ b/ui/timeline/timeline.runtime.css
@@ -1,6 +1,16 @@
+.timeline-all-top, .timeline-all-top .timeline__wrap, .timeline-all-top .timeline__wrap .timeline__items {
+  height: 100% !important;
+}
+
+.timeline-all-top .timeline__item {
+  padding-left: 1px !important;
+  padding-right: 1px !important;  
+}
+
 .timeline__item {
   pointer-events: none;
 }
+
 .timeline__item:after {
   pointer-events: all;
 }
